--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
                 <span data-text-preloader="R" class="letters-loading">
                     R
                 </span>
+                <span data-text-preloader="A" class="letters-loading">
+                    A
+                </span>
                 <span data-text-preloader="Z" class="letters-loading">
                     Z
                 </span>
