--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     <main class="main position-relative overflow-hidden" id="mains">
 
         <!-- Custom Line Shape -->
-        <div class="line-shape cus-z-1 first w-100 h-100 d-flex flex-wrap"></div>
+        <div class="line-shape cus-z-1 first w-100 h-100 d-none flex-wrap"></div>
         <!-- Custom Line Shape -->
 
         <!-- Hero Section Version0 -->
