--- a/index.html
+++ b/index.html
@@ -1234,15 +1234,16 @@
         <!-- Version01 Testimonial End -->
 
         <!-- Contact Section Start -->
-        <section class="contact-section fix section-bg section-padding pb-0" id="contact">
+              <section class="contact-section fix section-bg section-padding pb-0" id="contact">
             <div class="container">
                 <div class="row g-5">
-                    <div class="col-lg-6 wow fadeInUp" data-wow-delay=".5s">
+                    <div class="col-lg-12 wow fadeInUp mb-4" data-wow-delay=".5s">
                         <div class="contact-form-items style-2 style-3">
                             <div class="section-title">
                                 <span class="wow fadeInUp">contact us<i class="fa-solid fa-arrow-right"></i></span>
                                 <h2 class="wow fadeInUp" data-wow-delay=".3s">Get in touch!</h2>
                             </div>
+                            <!-- Contact Form HTML -->
                             <form  action="https://getform.io/f/bolmwzva" method="POST" id="contact-form" class="mt-4 mt-md-0">
                                 <div class="row g-4">
                                     <div class="col-lg-6">
@@ -1285,17 +1286,18 @@
                             </form>
                         </div>
                     </div>
-                    <div class="col-lg-6 wow fadeInUp" data-wow-delay=".3s">
+                    <!-- <div class="col-lg-6 wow fadeInUp" data-wow-delay=".3s">
                         <div class="map-items">
                             <div class="googpemap">
-                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6678.7619084840835!2d144.9618311901502!3d-37.81450084255415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642b4758afc1d%3A0x3119cc820fdfc62e!2sEnvato!5e0!3m2!1sen!2sbd!4v1641984054261!5m2!1sen!2sbd" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                                <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6678.7619084840835!2d144.9618311901502!3d-37.81450084255415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642b4758afc1d%3A0x3119cc820fdfc62e!2sEnvato!5e0!3m2!1sen!2sbd!4v1641984054261!5m2!1sen!2sbd"
+                                    style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
-
 
         <!-- Text SLider Start -->
         <div class="digital-solution bg1-clr home-onetext pb-20">
