--- a/index.html
+++ b/index.html
@@ -1258,6 +1258,11 @@
                                     </div>
                                     <div class="col-lg-12">
                                         <div class="form-clt">
+                                            <input type="text" name="service" id="service" placeholder="Type Of Service*">
+                                        </div>
+                                    </div>
+                                    <!-- <div class="col-lg-12">
+                                        <div class="form-clt">
                                             <div class="nice-select" tabindex="0">
                                                 <span class="current">Type Of Service</span>
                                                 <ul class="list">
@@ -1271,7 +1276,7 @@
                                                 </ul>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                     <div class="col-lg-12">
                                         <div class="form-clt">
                                             <textarea name="message" id="message" placeholder="Your Message"></textarea>
