--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     </ul>
                     <div class="thumb-content" data-aos="zoom-in-up" data-aos-duration="1800" data-aos-delay="7">
                         <p class="black-clr mb-xxl-4 mb-xl-3 mb-lg-3 mb-md-2 mb-2">
-                            We are a full-stack product agency with headquarters in the UK that focuses on web and mobile application design, strategy, and development.
+                            We are a full-stack product agency with headquarters in the US that focuses on web and mobile application design, strategy, and development.
                         </p>
                         <a href="#about" class="explore-more black-clr d-inline-flex align-items-center gap-2">
                             Explore More
@@ -576,7 +576,7 @@
                         <span class="wow fadeInUp">WHAT WE OFFER <i class="fa-solid fa-arrow-right"></i></span>
                         <h2 class="wow fadeInUp" data-wow-delay=".3s">best services Provider</h2>
                     </div>
-                    <p class="text-white wow fadeInUp" data-wow-delay=".5s">We are a full-stack product agency with headquarters in the UK <br> that focuses on web and mobile application design, strategy, and development.</p>
+                    <p class="text-white wow fadeInUp" data-wow-delay=".5s">We are a full-stack product agency with headquarters in the US <br> that focuses on web and mobile application design, strategy, and development.</p>
                 </div>
                 <div class="row">
                     <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".3s">
