--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
                                         Creative
                                     </span>
                                     <h5>
-                                        <a href="study-details.html"
+                                        <a href="#"
                                             class="white-clr d-flex align-items-center justify-content-between gap-3">
                                             <span class="texts">
                                                 A Simple Social Media Marketing Checklist
@@ -793,7 +793,7 @@
                                         Creative
                                     </span>
                                     <h5>
-                                        <a href="study-details.html"
+                                        <a href="#"
                                             class="white-clr d-flex align-items-center justify-content-between gap-3">
                                             <span class="texts">
                                                 A Simple Social Media Marketing Checklist
@@ -816,7 +816,7 @@
                                         Creative
                                     </span>
                                     <h5>
-                                        <a href="study-details.html"
+                                        <a href="#"
                                             class="white-clr d-flex align-items-center justify-content-between gap-3">
                                             <span class="texts">
                                                 A Simple Social Media Marketing Checklist
@@ -839,7 +839,7 @@
                                         Creative
                                     </span>
                                     <h5>
-                                        <a href="study-details.html"
+                                        <a href="#"
                                             class="white-clr d-flex align-items-center justify-content-between gap-3">
                                             <span class="texts">
                                                 A Simple Social Media Marketing Checklist
