--- a/index.html
+++ b/index.html
@@ -773,10 +773,10 @@
                                         <a href="#"
                                             class="white-clr d-flex align-items-center justify-content-between gap-3">
                                             <span class="texts">
-                                                A Simple Social Media Marketing Checklist
+                                              A shoe is an item of footwear intended to protect and comfort the human foot.
                                             </span>
                                             <span class="rot60">
-                                                <i class="fas fa-arrow-up theme-clr"></i>
+<!--                                                 <i class="fas fa-arrow-up theme-clr"></i> -->
                                             </span>
                                         </a>
                                     </h5>
@@ -796,10 +796,10 @@
                                         <a href="#"
                                             class="white-clr d-flex align-items-center justify-content-between gap-3">
                                             <span class="texts">
-                                                A Simple Social Media Marketing Checklist
+                                               connect users with restaurants for easy menu browsing, order placement, and delivery,
                                             </span>
                                             <span class="rot60">
-                                                <i class="fas fa-arrow-up theme-clr"></i>
+<!--                                                 <i class="fas fa-arrow-up theme-clr"></i> -->
                                             </span>
                                         </a>
                                     </h5>
@@ -819,10 +819,10 @@
                                         <a href="#"
                                             class="white-clr d-flex align-items-center justify-content-between gap-3">
                                             <span class="texts">
-                                                A Simple Social Media Marketing Checklist
+                                                a mobile application designed for online shopping, allowing users to browse products
                                             </span>
                                             <span class="rot60">
-                                                <i class="fas fa-arrow-up theme-clr"></i>
+<!--                                                 <i class="fas fa-arrow-up theme-clr"></i> -->
                                             </span>
                                         </a>
                                     </h5>
@@ -842,10 +842,10 @@
                                         <a href="#"
                                             class="white-clr d-flex align-items-center justify-content-between gap-3">
                                             <span class="texts">
-                                                A Simple Social Media Marketing Checklist
+                                               a software application that facilitates secure and efficient processing of online and in-app payments
                                             </span>
                                             <span class="rot60">
-                                                <i class="fas fa-arrow-up theme-clr"></i>
+<!--                                                 <i class="fas fa-arrow-up theme-clr"></i> -->
                                             </span>
                                         </a>
                                     </h5>
