--- a/index.html
+++ b/index.html
@@ -276,38 +276,33 @@
         <!-- Hero Section Version0 -->
 
         <!-- Sponsor Start -->
-        <div class="sponsor-section blackbg pt-space">
+      <div class="sponsor-section blackbg pt-space">
             <div class="sponsor-wrap ps-sm-10 ps-2 pe-2">
                 <div class="swiper trusted-inner">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <a href="javascript:void(0)" class="brand-image">
-                                <img src="assets/img/client/c1.png" alt="img">
+                                <img src="assets/img/client/cl (1).png" alt="img" style="width: 200%">
                             </a>
                         </div>
                         <div class="swiper-slide">
                             <a href="javascript:void(0)" class="brand-image">
-                                <img src="assets/img/client/c2.png" alt="img">
+                                <img src="assets/img/client/cl (5).png" alt="img" style="width: 200%">
                             </a>
                         </div>
                         <div class="swiper-slide">
                             <a href="javascript:void(0)" class="brand-image">
-                                <img src="assets/img/client/c3.png" alt="img">
+                                <img src="assets/img/client/cl (2).png" alt="img" style="width: 200%">
                             </a>
                         </div>
                         <div class="swiper-slide">
                             <a href="javascript:void(0)" class="brand-image">
-                                <img src="assets/img/client/c4.png" alt="img">
+                                <img src="assets/img/client/cl (3).png" alt="img" style="width: 200%">
                             </a>
                         </div>
                         <div class="swiper-slide">
                             <a href="javascript:void(0)" class="brand-image">
-                                <img src="assets/img/client/c5.png" alt="img">
-                            </a>
-                        </div>
-                        <div class="swiper-slide">
-                            <a href="javascript:void(0)" class="brand-image">
-                                <img src="assets/img/client/c6.png" alt="img">
+                                <img src="assets/img/client/cl (4).png" alt="img" style="width: 200%">
                             </a>
                         </div>
                     </div>
