--- a/index.html
+++ b/index.html
@@ -1665,7 +1665,7 @@
                     </a>
                 </li>
             </ul>
-            <a href="contact.html"
+            <a href="#contact"
                 class="d-flex cmn-btn cmn-border justify-content-center fw-500 align-items-center gap-2 py-xl-3 py-2 px-2 rounded">
                 <span class="icons">
                     <i class="fas fa-arrow-up white"></i>
