--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- == Page title == -->
     <title>Crazy Apps 4u</title>
     <!-- Favicon/x-icon -->
-    <link rel="shortcut icon" href="assets/img/logo/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/logo/crazylogo.webp" type="image/x-icon">
     <!-- Bootstrap Min 5.2.3 Css-->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <!-- Fontawsome Icons Css-->
