--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Keywords -->
-    <meta name="keywords" content="boot, Bootstrap, Webgen - HTML Template">
+    <meta name="keywords" content="crazyapps4u">
     <!--  Description -->
-    <meta name="description" content="Webgen - Landing HTML Template">
+    <meta name="description" content="US’s Premier Mobile App Development Company, our commitment is reflected in our extensive local clientele and the highest client satisfaction reviews. With a guarantee of on-time delivery and no hidden costs, we redefine excellence in app development. Our apps boast exceptional performance and are certified by both Apple and Google, ensuring a seamless experience for users and unmatched quality for our clients.">
     <!-- == Page title == -->
     <title>Crazy Apps 4u</title>
     <!-- Favicon/x-icon -->
