--- a/index.html
+++ b/index.html
@@ -1331,10 +1331,10 @@
         <!-- Text Slider End -->
 
     </main>
-    <!-- Main End -->
+    <!-- Main End --
 
-    <!-- Footer Version-1 Start -->
-    <footer class="footer-version-one zindex1 position-relative">
+      <!-- Footer Version-1 Start -->
+      <footer class="footer-version-one zindex1 position-relative">
         <div class="container">
             <div class="footer-topversion-one pt-20 pb-20">
                 <div class="row gy-lg-0 gy-10 mt-xxl-5 mb-xxl-5 justify-content-sm-between justify-content-center">
@@ -1357,7 +1357,8 @@
                                 </svg>
                             </h5>
                             <p class="pra-clr mb-xxl-7 mb-6" data-aos="zoom-in" data-aos-duration="1600">
-                                At CrazyApps4U, we are passionate about bringing your digital ideas to life. As a leading app development company.
+                                At CrazyApps4U, we are passionate about bringing your digital ideas to life. As a
+                                leading app development company.
                             </p>
                             <ul class="common-social d-flex align-items-center gap-2">
                                 <li data-aos="zoom-in-right" data-aos-duration="1400">
@@ -1448,8 +1449,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#usecases"
-                                        class="d-flex align-items-center gap-2 flink-items pra-clr">
+                                    <a href="#usecases" class="d-flex align-items-center gap-2 flink-items pra-clr">
                                         <span class="ani-icons">
                                             <i class="fas fa-angle-double-right pra-clr"></i>
                                         </span>
@@ -1487,39 +1487,22 @@
                             </h5>
                             <ul class="link-footer d-grid gap-xxl-5 gap-4" data-aos="zoom-in" data-aos-duration="1400">
                                 <li>
-                                    <a href="#" class="d-flex align-items-center gap-2 flink-items pra-clr">
+                                    <a href="/privacy.html" class="d-flex align-items-center gap-2 flink-items pra-clr">
                                         <span class="ani-icons">
                                             <i class="fas fa-angle-double-right pra-clr"></i>
                                         </span>
-                                        UI/UX Experience
+                                        Privacy Policy
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#"
-                                        class="d-flex align-items-center gap-2 flink-items pra-clr">
+                                    <a href="/terms.html" class="d-flex align-items-center gap-2 flink-items pra-clr">
                                         <span class="ani-icons">
                                             <i class="fas fa-angle-double-right pra-clr"></i>
                                         </span>
-                                        Web Development
+                                        Terms and Conditions
                                     </a>
                                 </li>
-                                <li>
-                                    <a href="#"
-                                        class="d-flex align-items-center gap-2 flink-items pra-clr">
-                                        <span class="ani-icons">
-                                            <i class="fas fa-angle-double-right pra-clr"></i>
-                                        </span>
-                                        Product Design
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#" class="d-flex align-items-center gap-2 flink-items pra-clr">
-                                        <span class="ani-icons">
-                                            <i class="fas fa-angle-double-right pra-clr"></i>
-                                        </span>
-                                        SEO Optimization
-                                    </a>
-                                </li>
+                                
                             </ul>
                         </div>
                     </div>
@@ -1577,13 +1560,14 @@
                     <i class="fas fa-arrow-up"></i>
                 </a>
                 <p class="pra-clr">
-                    &copy; Copyright 2025 crazyapps4u | Powered by <a href="https://planetexcellence.info/" class="theme-clr" target="_blank">Planet Excellence</a>
+                    &copy; Copyright 2025 crazyapps4u | Powered by <a href="https://planetexcellence.info/"
+                        class="theme-clr" target="_blank">Planet Excellence</a>
                 </p>
             </div>
         </div>
     </footer>
     <!-- Footer Version-1 End -->
-
+    
     <!-- Sub Sidebar Custom End -->
     <div class="subside-barmenu">
         <div class="remove-click d-flex justify-content-center align-items-center">
