--- a/privacy.html
+++ b/privacy.html
@@ -5,18 +5,17 @@
 
 <head>
 
-    <!-- == Meta Tags == -->
-    <meta charset="UTF-8">
+   <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Keywords -->
     <meta name="keywords" content="boot, Bootstrap, Webgen - HTML Template">
     <!--  Description -->
-    <meta name="description" content="Webgen - Landing HTML Template">
+    <meta name="description" content="US’s Premier Mobile App Development Company, our commitment is reflected in our extensive local clientele and the highest client satisfaction reviews. With a guarantee of on-time delivery and no hidden costs, we redefine excellence in app development. Our apps boast exceptional performance and are certified by both Apple and Google, ensuring a seamless experience for users and unmatched quality for our clients.">
     <!-- == Page title == -->
-    <title>Webgen - Digital Agency HTML Template</title>
+    <title>privacy-policy Crazy Apps 4u</title>
     <!-- Favicon/x-icon -->
-    <link rel="shortcut icon" href="assets/img/logo/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/logo/crazylogo.webp" type="image/x-icon">
     <!-- Bootstrap Min 5.2.3 Css-->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <!-- Fontawsome Icons Css-->
